Finished predicted rating algorithm

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -11,8 +11,7 @@
     <h2 class = "movie_title"><a href = "{{movie.url}}">{{movie.title}}</a></h2>
     {% if session.get("user_id") %}
         <form class="rate" action="{{ url_for("rate_movie", movie_id = movie.id) }}" method='POST'>
-<!--         <form class="login" action="{{ url_for("process_login") }}" method='POST'>
- -->            <h2 class="login-heading">Rate this movie</h2>
+           <h2 class="login-heading">Rate this movie</h2>
             1<input type="radio" name="rating" value="1">
             2<input type="radio" name="rating" value="2">
             3<input type="radio" name="rating" value="3">
@@ -24,10 +23,8 @@
             <span id = "1" onclick = "test.html">☆</span><span id = "2">☆</span><span>☆</span><span>☆</span><span>☆</span>
         </div>
 
+    <h2> RATING : {{rating}}
 
-        {% for compared_user_value in list_of_compares  %}
-        <p>{{compared_user_value}}</p>
-        {% endfor %}
 
     {% endif %}
 
