--- a/static/css/stars.css
+++ b/static/css/stars.css
@@ -2,6 +2,9 @@
     Ratings Stars
     (with as little code as possible)
 */
+.star{
+  color:black;
+}
 .rating {
   unicode-bidi: bidi-override;
   direction: rtl;
@@ -14,12 +17,22 @@
   position: relative;
 
 }
-.rating > span:hover,
+/*.rating > span:hover,
 .rating > span:hover ~ span {
   
-}
+}*/
 .rating > span:hover:before,
 .rating > span:hover ~ span:before {
+   content: "\2605";
+   position: absolute;
+   left: 0; 
+   color: #ffa500;
+}
+
+
+.clicked:before,
+.clicked ~ .clicked:before
+{
    content: "\2605";
    position: absolute;
    left: 0; 
